feat: WIP: API docs
