# internal/dto/dto.go
@@ -5,11 +5,22 @@ import (
 	"time"
 )
 
-type JobDTO struct {
-	ID          uint      `json:"id" swaggerignore:"true"`
-	CreatedAt   time.Time `json:"createdAt" swaggerignore:"true"`
-	UpdatedAt   time.Time `json:"updatedAt" swaggerignore:"true"`
-	DeletedAt   time.Time `json:"deletedAt,omitempty" swaggerignore:"true"`
+type JobDTOInput struct {
+	Title       string `json:"title"`
+	Description string `json:"description"`
+	Company     string `json:"company"`
+	Location    string `json:"location"`
+	Salary      int64  `json:"salary"`
+	IsActive    bool   `json:"isActive"`
+	IsRemote    bool   `json:"isRemote"`
+	Link        string `json:"link"`
+}
+
+type JobDTOOutput struct {
+	ID          uint      `json:"id"`
+	CreatedAt   time.Time `json:"createdAt"`
+	UpdatedAt   time.Time `json:"updatedAt"`
+	DeletedAt   time.Time `json:"deletedAt,omitempty"`
 	Title       string    `json:"title"`
 	Description string    `json:"description"`
 	Company     string    `json:"company"`
@@ -18,5 +29,5 @@ type JobDTO struct {
 	IsActive    bool      `json:"isActive"`
 	IsRemote    bool      `json:"isRemote"`
 	Link        string    `json:"link"`
-	Uuid        uuid.UUID `json:"uuid" swaggerignore:"true"`
+	Uuid        uuid.UUID `json:"uuid"`
 }
